# QRN-RL-GNN

./: .gitignore  README.md  agent.py  cnn_model.pth  cnn_model.py  custom_agent.py  example.ipynb  experiment.py  game.py  graph_models.py  gym_env.py  main.py  models.py  pyproject.toml  quantum_network_env.py  repeater_network.py  repeaters.py  requirements.txt  test.py  test_output.txt  todo.txt  version_control.py
assets/: gnn_model.pth  validation_results.txt
assets/trained_models/: d(10-2)l4u6e500m100p99a95t1000c100.pth  descriptions.txt  exp_regime.pth  gnn_model.pth  l4_u6_e1000__p85_a85_tNcN.pth
assets/validation_results/: validation_results.txt
game/: README.md  game.py  play.py
logs/: information.txt  model.pth  model_summary.txt  test_metrics.json  training_information.txt
logs/model_checkpoints/: GNN_model.pth  model.pth
logs/models/: model.pth  model_summary.txt
logs/textfiles/: alternating_test_output.txt  random_test_output.txt  (+2 more)
src/: __init__.py  agent.py  agent2.py  buffer.py  cnn_env.py  cnn_environment.py  cnn_main.py  debugging.ipynb  environment.py  experiment.py  gnn_env.py  gnn_environment.py  gnn_main.py  gnn_model.pth  gym_env.py  main.py  main_cnn.py  main_gnn.py  mlp_gym_env.py  model.py  models.py  notebook.ipynb  plot_config.py  repeaters.py  rl_loops.py  sandbox.ipynb  stats.py  strategies.py  test.py  training.py  trial_and_error.py  validation.py
tests/: generators.py  gnn_cutoff.py  gnn_diagnostics.py  gnn_mechanisms.py  test.py  test_agent.py  test_integration.py  test_repeaters.py
wandb/: latest-run
(+157 files in other folders)
